syntax = "proto3";
package dn_proto;

message CodeRequest {
	string code = 1;
}

message ChunkRequest {
	bytes chunk = 1;
	string tipo = 2;
}

service ChunkService {
	rpc EnviarChunks(ChunkRequest) returns (CodeRequest) {}
}

