syntax = "proto3";
package nn_proto;

message CodeRequest {
	string code = 1;
}


message Propuesta{
	string cantidadn1 = 1;
	string cantidadn2 = 2;
	string cantidadn3 = 3;
	string nombrel = 4;
	string cantidadtotal = 5;
}


service HelloworldService {
	rpc DisplayLista(CodeRequest) returns (CodeRequest) {}
	rpc EnviarPropuesta(Propuesta) returns (CodeRequest) {}
}
